--- a/alianzas.html
+++ b/alianzas.html
@@ -125,7 +125,7 @@
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -157,8 +157,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -190,8 +190,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -223,8 +223,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -256,8 +256,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -289,8 +289,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -322,8 +322,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -355,8 +355,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -388,8 +388,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -421,8 +421,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -454,8 +454,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -487,8 +487,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -520,8 +520,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -553,8 +553,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -586,8 +586,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -619,8 +619,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -652,8 +652,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -685,8 +685,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -718,8 +718,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
