--- a/acerca.html
+++ b/acerca.html
@@ -70,18 +70,19 @@
 
 
     <!-- Acerca de  -->
-    <section class="container" id="nosotros">
-        <div class="row pb-3 pt-3 text-center bg-light">
-            <div class="col" data-aos="zoom-in">
-                <h3>NOSOTROS</h3>
-            </div>
-        </div>
+    <section class="" id="nosotros">
         <div class="row mt-4 align-items-center">
-            <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
-                <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
+
+            <div class="col-12 mb-3 text-center title font-weight-bold">
+                <p class="text-uppercase">¿Quines somos?</p>
             </div>
-            <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
-                <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
+
+            <div class="d-none col-5 d-flex justify-content-center align-items-center plash">
+                <img id="img-control" class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
+            </div>
+
+            <div class="col-7 pr-4">
+                <p class="p2 text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
                     sector
                     de la economía
                     solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
@@ -93,6 +94,12 @@
                     personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su
                     trabajo.
                     Establecido el decreto 4588 de 2006.</p>
+
+            </div>
+
+            <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
+            </div>
+            <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
             </div>
         </div>
         <hr>
