--- a/acerca.html
+++ b/acerca.html
@@ -78,11 +78,11 @@
             </div>
 
             <div class="d-none col-5 d-flex justify-content-center align-items-center plash">
-                <img id="img-control" class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
+                <img id="img-control super" class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
             </div>
 
-            <div class="col-7 pr-4">
-                <p class="p2 text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
+            <div class="col-7 col-xl-6 pr-4">
+                <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
                     sector
                     de la economía
                     solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
