--- a/politica.html
+++ b/politica.html
@@ -69,12 +69,12 @@
     </section>
 
     <section class="container" id="politica">
-        <div class="row pb-3 pt-3 align-items-center bg-light">
-            <div class="col-12 text-center" data-aos="zoom-in">
-                <h3>POLÍTICA DE CALIDAD</h3>
-            </div>
-        </div>
         <div class="row justify-content-around mt-4">
+
+            <div class="col-12 mb-3 text-center title font-weight-bold">
+                <p class="text-uppercase">Políticas de Calidad</p>
+            </div>
+
             <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
                 <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las
                     necesidades y
@@ -83,7 +83,9 @@
                     nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
                 </p>
             </div>
-            <hr>
+            
+
+            <div class="w-100"></div>
             <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right"
                 data-aos-duration="1200">
                 <strong> Valores corporativos:</strong>
@@ -122,6 +124,9 @@
         </div>
     </section>
 
+
+
+    <!-- Scripts -->
 
     <script src="js/bootstrap.min.js"></script>
 </body>
