--- a/index.html
+++ b/index.html
@@ -112,6 +112,25 @@
   </section>
   <!-- FIN INDEX -->
 
+  <!-- Contenido interactivo -->
+  <main>
+    <section class="container-fluid">
+  
+      <div class="row">
+
+        <div class="col-12">
+            <div class="col mb-3 text-center title font-weight-bold">
+                <p class="text-uppercase">¿Qué esta ocurriendo?</p>
+              </div>      
+        </div>
+
+        <div class="col"> <h3>Noticias</h3> </div>
+        <div class="col"> <h3>Redes sociales</h3> </div>
+
+      </div>
+    </section>
+  </main>
+
 
   <!-- Contacto  -->
   <section id="contacto">
