--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
             <!-- <p class="lead text-white text-center">LOGO DE LA EMPRESA</p> -->
             <div class="col-sm-12 col-md-6 col-xl-6 logo-index d-none d-sm-block" data-aos="zoom-in-right">
-              <img class="img-fluid" src="img/logo.gif" alt="logo Coomutranstur">
+              <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
               <!-- <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur"> -->
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
