solucion logo index xD

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <meta property="fb:app_id" content="642215239509270" />
-  
+
   <link rel="icon" type="image/png" href="img/logo.png" />
-  
+
   <title>COOMUSTRANSTUR</title>
 
   <link rel="stylesheet" href="css/style.css">
@@ -89,7 +89,7 @@
                 <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
             <!-- <p class="lead text-white text-center">LOGO DE LA EMPRESA</p> -->
             <div class="col-sm-12 col-md-6 col-xl-6 logo-index d-none d-sm-block" data-aos="zoom-in-right">
-              <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur">
+              <img class="img-fluid" src="img/logo.gif" alt="logo Coomutranstur">
               <!-- <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur"> -->
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
@@ -115,17 +115,25 @@
   <!-- Contenido interactivo -->
   <main>
     <section class="container-fluid">
-  
+
       <div class="row">
 
         <div class="col-12">
-            <div class="col mb-3 text-center title font-weight-bold">
-                <p class="text-uppercase">¿Qué esta ocurriendo?</p>
-              </div>      
+          <div class="col mb-3 text-center title font-weight-bold">
+            <p class="text-uppercase">¿Qué esta ocurriendo?</p>
+          </div>
         </div>
 
-        <div class="col"> <h3>Noticias</h3> </div>
-        <div class="col"> <h3>Redes sociales</h3> </div>
+        <div class="col">
+          <h3>Noticias</h3>
+
+        </div>
+        <div class="col-2">
+          <h3>Redes sociales</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe dolorum dolorem quo! Expedita facere
+            ab quae sint. Id repellendus similique ex pariatur aperiam maiores veritatis officia sequi voluptates
+            optio.</p>
+        </div>
 
       </div>
     </section>
@@ -242,7 +250,7 @@
   </section>
 
 
-<!-- Scripts -->
+  <!-- Scripts -->
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -250,6 +258,10 @@
   <script src="js/aos.js"></script>
   <script src="js/facebook.js"></script>
   <script src="js/app.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 </div>
