--- a/acerca.html
+++ b/acerca.html
@@ -23,7 +23,8 @@
                         <!-- menu -->
                         <nav class="row navbar navbar-expand-sm bg-white">
                             <div class="col">
-                                <a class="navbar-brand ml-3 text-green" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
                             </div>
                             <div class="col d-none d-md-inline-block">
                                 <ul class="navbar-nav mt-2 float-right">
