--- a/alianzas.html
+++ b/alianzas.html
@@ -32,7 +32,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 text-green" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
               <div class="col d-none d-md-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -50,29 +51,29 @@
             </nav>
             <nav class="row navbar navbar-expand-lg bg-nav-menu">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon">
-                <i class="fas fa-bars"></i>
-              </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#nosotros">Guía turística</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="acerca.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="politica.html">Política de Calidad</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-          <img src="holder.js/1900x400?theme=vine">
+                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                  <i class="fas fa-bars"></i>
+                </span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#nosotros">Guía turística</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="acerca.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="politica.html">Política de Calidad</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <img src="holder.js/1900x400?theme=vine">
           </div>
         </header>
         <!-- texto main -->
@@ -157,8 +158,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -190,8 +190,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -223,8 +222,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -256,8 +254,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -289,8 +286,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -322,8 +318,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -355,8 +350,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -388,8 +382,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -421,8 +414,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -454,8 +446,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -487,8 +478,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -520,8 +510,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -553,8 +542,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -586,13 +574,12 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Spa  y artículos de playa ébano</h4>
+              <h4>Spa y artículos de playa ébano</h4>
               <br>
 
               Propietario: ? <br>
@@ -619,8 +606,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -652,8 +638,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -685,8 +670,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -718,8 +702,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -826,7 +809,7 @@
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
     charset="utf-8"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
-  
+
   <script>
     $('a.gallery').featherlightGallery({
       previousIcon: '«',
