--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 text-green" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="navbar-brand ml-3 text-green" href="#"><span class=" font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
               <div class="col d-none d-md-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -129,7 +129,7 @@
           <h3>Noticias</h3>
 
         </div>
-        <div class="col-3">
+        <div class="col-sm-3">
           <h3>Redes sociales</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe dolorum dolorem quo! Expedita facere
             ab quae sint. Id repellendus similique ex pariatur aperiam maiores veritatis officia sequi voluptates
