--- a/index.html
+++ b/index.html
@@ -130,10 +130,13 @@
 
         </div>
         <div class="col-sm-3">
-          <h3>Redes sociales</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe dolorum dolorem quo! Expedita facere
-            ab quae sint. Id repellendus similique ex pariatur aperiam maiores veritatis officia sequi voluptates
-            optio.</p>
+          <h3>Eventos</h3>
+
+          <div>
+            <a class="twitter-timeline" data-height="530" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
+              by TwitterDev</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
         </div>
 
       </div>
